Text-align changes | Subtask forced rerender for bug fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -185,7 +185,7 @@ header {
   border-radius: 5px;
   padding: 15px;
   height: auto;
-  text-align: center;
+  text-align: left;
 }
 
 .task-subtasks{
